[gd_scene load_steps=2 format=3 uid="uid://c2bqv5h65lpqc"]

[ext_resource type="Script" uid="uid://15i43ntb3p3u" path="res://scripts/core/Main.gd" id="1_elqb8"]

[node name="MapEditorRoot" type="Node2D"]
script = ExtResource("1_elqb8")

[node name="MainCamera" type="Camera2D" parent="."]

[node name="ConnectionLayer" type="Node2D" parent="."]

[node name="RoomContainer" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]
